[package]
name = "overscoped"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.4.1"
bevy = { version = "0.17.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.35.0"
bevy_camera = "0.17.1"
bevy_common_assets = {version = "0.14.0", features = ["json"]}
itertools = "0.14.0"
serde = "1.0.228"
